# classy-fastapi

./: .gitignore  .gitlab-ci.yml  DEVELOPMENT.md  README.md  check.sh  pyproject.toml
.github/workflows/: tests.yaml
build-image/: Dockerfile  README.md
classy_fastapi/: __init__.py  decorators.py  routable.py  test_routable.py
