[tool.poetry]
name = "classy-fastapi"
version = "0.1.5"
description = "Class based routing for FastAPI"
authors = ["Oliver Dain <oliver@dains.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/companionlabs-opensource/classy-fastapi"
repository = "https://gitlab.com/companionlabs-opensource/classy-fastapi"
keywords = ["FastAPI", "Class", "Instance", "Routing"]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.68.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
mypy = "^0.910"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
